[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/OverworldScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/UIBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GoldInfoModule.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/ui/sun_icon.png" type="Texture" id=4]
[ext_resource path="res://images/overworld/map_background.png" type="Texture" id=5]
[ext_resource path="res://images/overworld/map_rose.png" type="Texture" id=6]
[ext_resource path="res://images/units/caravan.png" type="Texture" id=7]
[ext_resource path="res://scripts/CaravanSprite.gd" type="Script" id=8]
[ext_resource path="res://scenes/ChangeSceneButton.tscn" type="PackedScene" id=9]

[node name="OverworldScreen" type="Node"]
script = ExtResource( 1 )

[node name="OverworldInfoModule" type="Node2D" parent="."]
position = Vector2( 325, 525 )

[node name="UIBackground" parent="OverworldInfoModule" instance=ExtResource( 2 )]
self_modulate = Color( 0.721569, 0.792157, 0.92549, 1 )
margin_left = -175.0
margin_top = -48.0
margin_right = 62.0
margin_bottom = 67.0

[node name="GoldInfoModule" parent="OverworldInfoModule" instance=ExtResource( 3 )]
margin_left = -150.0
margin_top = -39.11
margin_right = -44.9999
margin_bottom = -19.11

[node name="OverworldInfoDayIcon" type="Sprite" parent="OverworldInfoModule"]
position = Vector2( -140, -5 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )

[node name="OverworldInfoDayLabel" type="Label" parent="OverworldInfoModule"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -125.77
margin_top = -10.0103
margin_right = -82.7702
margin_bottom = 3.98972
text = "Day #"

[node name="OverworldBackgroundSprite" type="Sprite" parent="."]
position = Vector2( 510.867, 298.706 )
scale = Vector2( 0.814481, 0.677103 )
z_index = -1
texture = ExtResource( 5 )

[node name="OverworldMapRose" type="Sprite" parent="."]
position = Vector2( 81.3943, 520.571 )
texture = ExtResource( 6 )

[node name="CaravanSprite" type="Sprite" parent="."]
position = Vector2( 167.852, 320.773 )
scale = Vector2( 0.5, 0.5 )
z_index = 3
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="CaravanTravelTween" type="Tween" parent="CaravanSprite"]

[node name="ChangeSceneButtonShopScreen" parent="." instance=ExtResource( 9 )]
margin_left = 915.17
margin_top = 33.0212
margin_right = 1009.17
margin_bottom = 85.0212
text = "Enter Shop"
new_scene_name = "shop_screen"
[connection signal="change_scene" from="ChangeSceneButtonShopScreen" to="." method="change_scene"]
